fix(scroll): add overflow auto CC-142

--- a/src/app/features/code-editor-v2/components/code-editor/components/terminal/terminal.component.scss
+++ b/src/app/features/code-editor-v2/components/code-editor/components/terminal/terminal.component.scss
@@ -3,7 +3,7 @@
   color: white;
   padding-bottom: 10px;
   padding-left: 2px;
-  overflow: scroll;
+  overflow: auto;
   min-height: 25vh;
   max-height: 25vh;
   font-size: 0.7rem;
